# yaps

./: .gitignore  Cargo.toml  README.md
yaps-codecs/: Cargo.toml
yaps-codecs/src/: json.rs  lib.rs
yaps-core/: Cargo.toml
yaps-core/src/: actor_handle.rs  codec.rs  consumer_provider.rs  error.rs  func_handle.rs  lib.rs  local_hub.rs  local_orchestrator.rs  orchestrator.rs  plugin_connector.rs  serializer_deserializer.rs  single_provider.rs
yaps-core/tests/: tests.rs
yaps-macros/: Cargo.toml
yaps-macros/src/: defs.rs  lib.rs  utils.rs  with_serde.rs  yaps_plugin.rs
yaps-macros/src/yaps_plugin/: consumer_provider.rs  defs.rs  mod.rs  wrapper.rs  yaps_consumer.rs  yaps_consumer_provider.rs  yaps_export.rs  yaps_extern.rs  yaps_extern_arg.rs  yaps_extern_func.rs  yaps_extern_trait.rs  yaps_impl.rs  yaps_init.rs  yaps_plugin.rs  yaps_plugin_macro.rs  yaps_provider.rs  yaps_struct.rs  yaps_wrapper.rs
yaps-macros/tests/: mod.rs
yaps-macros/tests/yaps_plugin/: 00-empty-struct.rs  01-simple-consumer.rs  02-simple-provider.rs  03-multiple-funcs-provider.rs  04-wildcards-provider.rs  05-consumer-provider.rs  mod.rs
yaps-playground/: Cargo.toml
yaps-playground/src/: main.rs
yaps-serdes/: Cargo.toml
yaps-serdes/src/: json.rs  lib.rs
