[package]
name = "yaps-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full", "extra-traits", "visit-mut"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] } # TODO: we don't need all the features
yaps-serdes = { path = "../yaps-serdes" }
yaps-core = { path = "../yaps-core" }
trybuild = "1.0.104"
