[package]
name = "yaps-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
itertools = "0.14.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full", "extra-traits", "visit-mut"] }

[dev-dependencies]
yaps-codecs = { path = "../yaps-codecs" }
yaps-core = { path = "../yaps-core" }
trybuild = "1.0.104"
